log/microscope_log_190620_164957.txt
2019-06-20T16:49:58|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "Microscope_app.py", line 48, in <module>
    app = MicroscopeApp(sys.argv)
  File "C:\Users\lindat18\AppData\Local\Continuum\miniconda3\envs\scopefoundry\lib\site-packages\ScopeFoundry\base_app.py", line 338, in __init__
    self.setup()
  File "Microscope_app.py", line 28, in setup
    from HW_OceanOptics.OceanOptics_Scan import OceanOptics_Scan
  File "C:\Users\lindat18\Dropbox\Ginger_Lab\Microscope_App\HW_OceanOptics\OceanOptics_Scan.py", line 58
    self.img_item.setImage(sum_disp_img)#image=sum_disp_img, autoLevels=True, autoRange=False)
                                                                                             ^
IndentationError: unindent does not match any outer indentation level

